Make sure mid-gray has good contrast on sidebar

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -3,7 +3,7 @@
  */
 .near-black { color: #2f2c29; }
 .dark-gray { color: #4e443c; }
-.mid-gray { color: #756f6a; }
+.mid-gray { color: #706e66; }
 .near-white { color: #fcfcfa; }
 .orange { color: #c24a00; }
 .blue { color: #0f758c; }
